--- a/BooksApp/app/src/main/res/values/strings.xml
+++ b/BooksApp/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="profile">Profile</string>
     <string name="search">Search</string>
     <string name="cart">cart</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
